# CppToPython

./: .gitignore  CMakeLists.txt  GeDiM4Py.cpp  GeDiM4Py.py  ImportMesh.csv  PythonC++.ipynb  hello.cpp  hello.py  ns.cpp  test_burger.py  test_geometry.py  test_heat_conductivity.py  test_poisson.py  test_stokes.py
Meshes/: mesh1.xml  mesh1_facet_region.xml  mesh1_physical_region.xml  mesh2.xml  mesh2_facet_region.xml  mesh2_physical_region.xml  mesh3.xml  mesh3_facet_region.xml  mesh3_physical_region.xml
Meshes/Mesh1/: Cell0Ds.csv  Cell2Ds.csv
src/: CMakeLists.txt  EllipticProblem.cpp  EllipticProblem.hpp  FEM_RefElement_Langrange_PCC_Triangle_2D.cpp  FEM_RefElement_Langrange_PCC_Triangle_2D.hpp  GeDiM4Py_Interface.cpp  GeDiM4Py_Interface.hpp  GeDiM4Py_Logic.cpp  GeDiM4Py_Logic.hpp  PDE_Equation.cpp  PDE_Equation.hpp
test/: CMakeLists.txt  mock_Cube.hpp  test_Burger.hpp  test_NonLinearPoisson.hpp  test_Poisson.hpp  test_Stokes.hpp  test_geometry.hpp  test_heat_conductivity.hpp  test_python.hpp
